@@ -1,6 +1,8 @@
 <pre>
 2007-08-*:
 	* version 0.5
+	* :bmarks and :history now use the multiline message window for output
+	* rename :bm, :bmadd, and :bmdel to :bmarks, :bmark, and :delbmarks respectively
 	* new :normal command
 	* the command line keeps focus now, even when clicking outside of it
 	* vimperator.events.feedkeys("2zi") support for scripts
